donate our plan

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="main-header">
         <h1 class="header-heading">Let’s Help Those Who Are <br>
-            More In Need</h1>
+        More In Need</h1>
 
         <p class="heading-para">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
         deterruisset. No duo populo animal noluisse, enim</p>
@@ -46,6 +46,40 @@
 
             <button class="donate-btn-primary">Donate Now</button>
         </div>
+        <div class="our-donate-plan">
+            <div class="donate-plan">
+                <h2 class="donate-heading">Our Donate Plan</h2>
+                <p class="donate-para">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
+                deterruisset. No duo populo animal noluisse, enim</p>
+            </div>
+            <div class="donate-category">
+                <div class="food-family">
+                    <img src="" alt="">
+                    <h3 class="food">Food for a family</h3>
+                    <p class="food-des">Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+                </div>
+                <div class="food-family">
+                    <img src="" alt="">
+                    <h3 class="food">Shelter for a family</h3>
+                    <p class="food-des">Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+                </div>
+                <div class="food-family">
+                    <img src="" alt="">
+                    <h3 class="food">Education for a family</h3>
+                    <p class="food-des">Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+                </div>
+            </div>
+        </div>
+
     </div>
 </body>
 
